@@ -57,7 +57,6 @@ import static org.mockito.Mockito.when;
 
 import java.time.LocalDate;
 import java.time.ZoneId;
-import java.util.Collections;
 import java.util.Date;
 import java.util.HashSet;
 import java.util.List;
@@ -349,7 +348,7 @@ class JdbcEventAnalyticsTableManagerTest
 
         ProgramTrackedEntityAttribute tea = new ProgramTrackedEntityAttribute( program, tea1 );
 
-        program.setProgramAttributes( Collections.singletonList( tea ) );
+        program.setProgramAttributes( List.of( tea ) );
 
         DataElement d1 = createDataElement( 'Z', ValueType.TEXT, AggregationType.SUM );
 
@@ -507,7 +506,7 @@ class JdbcEventAnalyticsTableManagerTest
         Program programA = rnd.nextObject( Program.class );
         programA.setId( 0 );
 
-        when( idObjectManager.getAllNoAcl( Program.class ) ).thenReturn( Collections.singletonList( programA ) );
+        when( idObjectManager.getAllNoAcl( Program.class ) ).thenReturn( List.of( programA ) );
         when( organisationUnitService.getFilledOrganisationUnitLevels() ).thenReturn( ouLevels );
         when( jdbcTemplate.queryForList(
             "select temp.supportedyear from (select distinct extract(year from " + getDateLinkedToStatus()
@@ -542,7 +541,7 @@ class JdbcEventAnalyticsTableManagerTest
         Program programA = rnd.nextObject( Program.class );
         programA.setId( 0 );
 
-        when( idObjectManager.getAllNoAcl( Program.class ) ).thenReturn( Collections.singletonList( programA ) );
+        when( idObjectManager.getAllNoAcl( Program.class ) ).thenReturn( List.of( programA ) );
         when( idObjectManager.getDataDimensionsNoAcl( OrganisationUnitGroupSet.class ) ).thenReturn( ouGroupSet );
 
         AnalyticsTableUpdateParams params = AnalyticsTableUpdateParams.newBuilder().withStartTime( START_TIME ).build();
@@ -571,7 +570,7 @@ class JdbcEventAnalyticsTableManagerTest
         Program programA = rnd.nextObject( Program.class );
         programA.setId( 0 );
 
-        when( idObjectManager.getAllNoAcl( Program.class ) ).thenReturn( Collections.singletonList( programA ) );
+        when( idObjectManager.getAllNoAcl( Program.class ) ).thenReturn( List.of( programA ) );
         when( categoryService.getAttributeCategoryOptionGroupSetsNoAcl() ).thenReturn( cogs );
         when( jdbcTemplate.queryForList( getYearQueryForCurrentYear( programA, false ), Integer.class ) )
             .thenReturn( Lists.newArrayList( 2018, 2019 ) );
